external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/non_string_local_dep_path/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: TOML parse error at line 6, column 5
  |
6 | A = { local = 1 }
  |     ^^^^^^^^^^^^^
data did not match any variant of untagged enum ManifestDependencyInfo
